--- a/RedCell.UI.iOS.DragDrop/RedCell.UI.iOS.DragDrop.csproj
+++ b/RedCell.UI.iOS.DragDrop/RedCell.UI.iOS.DragDrop.csproj
@@ -23,6 +23,8 @@
     <ConsolePause>false</ConsolePause>
     <MtouchDebug>true</MtouchDebug>
     <CodesignKey>iPhone Developer</CodesignKey>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <DocumentationFile>bin\iPhone\Debug\RedCell.UI.iOS.DragDrop.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>none</DebugType>
