Help file updated

--- a/.gitignore
+++ b/.gitignore
@@ -182,3 +182,4 @@ UpgradeLog*.htm
 # Microsoft Fakes
 FakesAssemblies/
 /RedCell.UI.iOS.DragDrop.sln.GhostDoc.xml
+RedCell.UI.iOS.DragDrop.sln.GhostDoc.xml
