--- a/RedCell.UI.iOS.DragDrop/RedCell.UI.iOS.DragDrop.csproj
+++ b/RedCell.UI.iOS.DragDrop/RedCell.UI.iOS.DragDrop.csproj
@@ -17,7 +17,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\iPhone\Debug</OutputPath>
-    <DefineConstants>DEBUG</DefineConstants>
+    <DefineConstants>DEBUG;__UNIFIED__;__MOBILE__;__IOS__;XAMARIN_UNIFIED_API</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
